[package]
name = "cargo-bdeps"
version = "0.1.6"
authors = ["Nick Cardin <nick@cardin.email>", "errmac-v"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/nacardin/cargo-build-deps"
description = """
A cargo subcommand to build dependencies, helps speed up docker builds by 
allowing dependencies to be built earlier and cached.
"""
readme = "README.md"

[dependencies]
toml = "0.5"
clap = "2.33"
semver = "0.10.0"
json = "0.12.4"
